adding a Makefile command that will install the required dependencies for development and circleci

--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,12 @@ machine:
     Europe/Zurich
   php:
     version: 7.0.4
+dependencies:
+  cache_directories:
+    - "api/vendor"
+  pre:
+    # Install all dependencies
+    - make install
 test:
   override:
   # Don't run any tests
