--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,10 @@ AddType font/woff .woff
 <ifModule mod_rewrite.c>
     RewriteEngine On
 
+    # Make sure we're using HTTPS
+    RewriteCond %{HTTPS} =off
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [QSA,L,R=301]
+
     RewriteRule ^assets - [L,NC]
     RewriteRule ^extensions/([^/]+) - [L,NC]
     RewriteRule ^extensions/([^/]+)/assets - [L,NC]
